--- a/src/app/features/dashboard/components/students-chart/students-chart.component.scss
+++ b/src/app/features/dashboard/components/students-chart/students-chart.component.scss
@@ -9,7 +9,8 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
-	margin-top: 20px;
+	margin-top: 15px;
+	margin-left: 6px;
 
 	position: absolute;
 	display: flex;
@@ -27,7 +28,6 @@
 	align-items: center;
 	width: 200px;
 	height: 200px;
-	padding-bottom: 8px;
 }
 
 .color-box {
