--- a/src/app/features/dashboard/components/total-per-campus-chart/total-per-campus-chart.component.html
+++ b/src/app/features/dashboard/components/total-per-campus-chart/total-per-campus-chart.component.html
@@ -1,5 +1,5 @@
 <app-card-chart title="Total por Campus" subtitle="Semestre Letivo 2023/1">
 	<section class="d-flex g-2">
-		<canvas baseChart [data]="barChartData" [options]="barChartOptions" [type]="'bar'"></canvas>
+		<canvas baseChart [data]="barChartData()" [options]="barChartOptions" [type]="'bar'"></canvas>
 	</section>
 </app-card-chart>
