--- a/src/app/features/dashboard/components/total-per-titration-chart/total-per-titration-chart.component.html
+++ b/src/app/features/dashboard/components/total-per-titration-chart/total-per-titration-chart.component.html
@@ -1,7 +1,7 @@
 <app-card-chart title="Total por Título Acadêmico" subtitle="Semestre Letivo 2023/1">
 	<section class="d-flex g-2">
 		<div style="display: block">
-			<canvas baseChart [data]="barChartData" [options]="barChartOptions" [type]="'bar'"></canvas>
+			<canvas baseChart [data]="barChartData()" [options]="barChartOptions" [type]="'bar'"></canvas>
 		</div>
 	</section>
 </app-card-chart>
