--- a/src/app/features/coordinator/announcements/pages/announcement-form/announcement-form.component.scss
+++ b/src/app/features/coordinator/announcements/pages/announcement-form/announcement-form.component.scss
@@ -2,8 +2,12 @@
 	margin-top: 12px;
 }
 
-::ng-deep .NgxEditor__Content {
-	max-height: 28dvh;
-	overflow-y: auto;
-	min-height: 120px;
+::ng-deep .NgxEditor {
+	border-color: var(--border-color-alternative) !important;
+
+	&__Content {
+		max-height: 28dvh;
+		overflow-y: auto;
+		min-height: 120px;
+	}
 }
