--- a/src/app/features/coordinator/announcements/pages/announcement-details/announcement-details.component.scss
+++ b/src/app/features/coordinator/announcements/pages/announcement-details/announcement-details.component.scss
@@ -23,7 +23,7 @@ section {
 	.content {
 		display: flex;
 		flex-direction: column;
-		margin-top: 16px;
+		margin: 16px 0;
 		padding: 16px;
 		border-radius: 8px;
 		border: 1px solid var(--border-color-alternative);
