--- a/src/app/features/profile/pages/profile-edit/profile-edit.component.html
+++ b/src/app/features/profile/pages/profile-edit/profile-edit.component.html
@@ -5,6 +5,9 @@
 			<app-input id="name" label="Nome" formControlName="name"></app-input>
 		</div>
 		<div class="col-12 col-lg-3">
+			<app-input id="socialName" label="Nome Social" formControlName="socialName"></app-input>
+		</div>
+		<div class="col-12 col-lg-3">
 			<app-input id="cpf" label="CPF" formControlName="cpf"></app-input>
 		</div>
 	</div>
