--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -7,6 +7,9 @@
 		<app-item-info label="Nome" [value]="data.name"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
+		<app-item-info label="Nome Social" [value]="data.socialName"></app-item-info>
+	</div>
+	<div class="col-12 col-lg-3">
 		<app-item-info label="CPF" [value]="data.cpf"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
