--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 <app-loading></app-loading>
 <div class="template-base">
+	<div id="barra-brasil">
+		<ul id="menu-barra-temp" style="">
+			<li>
+				<a href="http://brasil.gov.br">Portal do Governo Brasileiro</a>
+			</li>
+		</ul>
+	</div>
 	<app-header [hideNavbar]="hideNavbar()"></app-header>
 	<app-alert></app-alert>
 	<main class="d-flex flex-fill" id="main">
