--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,28 @@
 	min-height: calc(100dvh - 23.3rem);
 	height: 100%;
 }
+
+#barra-brasil {
+	background: var(--blue-warm-vivid-90);
+	height: 20px;
+	padding: 0 0 0 10px;
+	display: block;
+
+	ul {
+		list-style: none;
+
+		li {
+			display: inline;
+			float: left;
+			padding-right: 10px;
+			margin-right: 10px;
+			border-right: 1px solid var(--color-secondary-03);
+
+			a {
+				font-family: sans, sans-serif;
+				text-decoration: none;
+				color: white;
+			}
+		}
+	}
+}
