--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-loading></app-loading>
 <div class="template-base">
-	<div id="barra-brasil">
+	<div class="d-none d-sm-block" id="barra-brasil">
 		<ul id="menu-barra-temp" style="">
 			<li>
 				<a href="http://brasil.gov.br">Portal do Governo Brasileiro</a>
