--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,7 +3,7 @@
 		<div class="logo">
 			<img ngSrc="/logos/ufu_white_hor.png" alt="Logo UFU" height="360" width="694" priority />
 		</div>
-		<div class="row align-items-end justify-content-between py-5">
+		<div class="row align-items-end justify-content-between d-none d-sm-flex py-5">
 			<div class="col">
 				<div class="social-network">
 					<div class="social-network-title">Redes Sociais</div>
