--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 	<div class="d-none d-sm-block" id="barra-brasil">
 		<ul id="menu-barra-temp" style="">
 			<li>
-				<a href="http://brasil.gov.br">Portal do Governo Brasileiro</a>
+				<a href="https://brasil.gov.br">Portal do Governo Brasileiro</a>
 			</li>
 		</ul>
 	</div>
