(feat): new publications screen

--- a/src/app/features/graduates/professional-information/pages/professional-information-form/professional-information-form.component.html
+++ b/src/app/features/graduates/professional-information/pages/professional-information-form/professional-information-form.component.html
@@ -83,7 +83,11 @@
 					id="relatedAcademicInfo"
 					label="Curso Relacionado"
 					formControlName="relatedAcademicInfo"
-				></app-select>
+				>
+					@if (form.get('relatedAcademicInfo') | hasError) {
+						<span br-feedback state="danger">Campo obrigatório</span>
+					}
+				</app-select>
 			}
 		</div>
 		<div
