(feat): export data in table

--- a/src/app/features/coordinator/graduates/graduates.component.html
+++ b/src/app/features/coordinator/graduates/graduates.component.html
@@ -1,6 +1,6 @@
 <h1>Listagem de Egressos</h1>
 <app-graduates-filter></app-graduates-filter>
-<app-table [data]="dataPaginated" [columns]="columns"></app-table>
+<app-table title-table="Egressos" [actions]="actions" showHeader [data]="dataPaginated" [columns]="columns"></app-table>
 <app-paginator
 	[pageIndex]="graduatePagination.page"
 	[pageSizeOptions]="[5, 10, 20]"
