--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -22,6 +22,7 @@
 									[cdkMenuPosition]="[{ originX: 'end', originY: 'bottom', overlayX: 'end', overlayY: 'top' }]"
 									class="br-sign-in"
 									type="button"
+									title="Ver mais opções"
 									aria-label="Olá, {{ user().fullName }}"
 								>
 									<span class="br-avatar" [title]="user().fullName"
