(tests): added more tests - radio - paginator - loading - dialog-confirm - magic-button - item-info

--- a/src/app/shared/components/radio/radio.component.html
+++ b/src/app/shared/components/radio/radio.component.html
@@ -29,6 +29,7 @@
 			[id]="'op-' + option.value"
 			type="radio"
 			name="radio"
+			[attr.aria-checked]="option.value === value"
 			[checked]="option.value === value"
 			[value]="option.value"
 		/>
