--- a/src/app/features/dashboard/components/filter/filter.component.html
+++ b/src/app/features/dashboard/components/filter/filter.component.html
@@ -8,21 +8,21 @@
 			label="Semestre letivo"
 		></app-select>
 		<app-multi-select
-			[data]="courseOptions"
+			[options]="courseOptions"
 			formControlName="course"
 			class="col-md-3 col-12"
 			id="course"
 			label="Curso"
 		></app-multi-select>
 		<app-multi-select
-			[data]="courseLevelOptions"
+			[options]="courseLevelOptions"
 			formControlName="titration"
 			class="col-md-3 col-12"
 			id="titration"
 			label="Titulação"
 		></app-multi-select>
 		<app-multi-select
-			[data]="campusOptions"
+			[options]="campusOptions"
 			formControlName="campus"
 			class="col-md-3 col-12"
 			id="campus"
