(test): added more tests - footer - header - table

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -24,13 +24,13 @@
 				<div class="d-flex align-items-center justify-content-end">
 					<a
 						class="logo-acesso-footer"
-						href="http://www.gov.br/acessoainformacao/"
+						href="https://www.gov.br/acessoainformacao/"
 						alt="Acesso à informação"
 						title="Acesso à informação"
 					></a
 					><a
 						class="logo-governo-federal"
-						href="http://www.brasil.gov.br/"
+						href="https://www.brasil.gov.br/"
 						alt="Governo Federal"
 						title="Governo Federal"
 					></a>
