--- a/src/app/features/graduates/publications/publications.component.html
+++ b/src/app/features/graduates/publications/publications.component.html
@@ -23,13 +23,16 @@
 				<app-item-info label="Título da Publicação" [value]="publication.title"></app-item-info>
 			</div>
 			<div class="col-12 col-lg-3">
-				<app-item-info label="Nome do Autor" [value]="publication.authorName"></app-item-info>
+				<app-item-info label="Autores" [value]="publication.authors"></app-item-info>
 			</div>
 			<div class="col-12 col-lg-3">
 				<app-item-info label="Ano da Publicação" [value]="publication.year.toString()"></app-item-info>
 			</div>
 			<div class="col-12 col-lg-3">
 				<app-item-info label="Veículo" [value]="publication.journal"></app-item-info>
+			</div>
+			<div class="col-12 col-lg-3">
+				<app-item-info type="url" label="URL da Publicação" [value]="publication.url"></app-item-info>
 			</div>
 			<div class="col-12 col-lg-3">
 				<app-item-info label="Curso" [value]="publication.relatedAcademicInfo"></app-item-info>
